--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/animate.css"/>
 	<link rel="stylesheet" href="css/owl.carousel.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/style2.css"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
