--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,17 @@
 	<link rel="stylesheet" href="css/owl.carousel.css"/>
 	<link rel="stylesheet" href="css/style2.css"/>
 	<link rel="stylesheet" href="css/responsive.css"/>
+  <link
+  rel="stylesheet"
+  type="text/css"
+  charset="UTF-8"
+  href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
+/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
